Исправляет ссылку Подробнее и иконки соц.сетей

--- a/static/pug/catalog.pug
+++ b/static/pug/catalog.pug
@@ -177,7 +177,8 @@ html(lang="ru-RU")
                               </svg>
                             span.books__star 3.8
                           .books__wrapper
-                            a.books__link(href="iron-king.html") Подробнее #[span.books__pages 416 страниц]
+                            a.books__link(href="iron-king.html") Подробнее 
+                            span.books__pages 416 страниц
                     li.books__item
                       .books__inner
                         img.books__img(src="static/images/content/book-fox-hole.jpg" alt='Фото книги - "Лисья нора"' width="221" height="221")
@@ -193,7 +194,8 @@ html(lang="ru-RU")
                               </svg>
                             span.books__star 4.2
                           .books__wrapper
-                            a.books__link(href="#") Подробнее #[span.books__pages 336 страниц]
+                            a.books__link(href="#") Подробнее 
+                            span.books__pages 336 страниц
                     li.books__item
                       .books__inner
                         img.books__img(src="static/images/content/book-just-masa.jpg" alt='Фото книги - "Просто маса"' width="221" height="221")
@@ -209,7 +211,8 @@ html(lang="ru-RU")
                               </svg>
                             span.books__star 4.5
                           .books__wrapper
-                            a.books__link(href="#") Подробнее #[span.books__pages 448 страниц]
+                            a.books__link(href="#") Подробнее 
+                            span.books__pages 448 страниц
                     li.books__item
                       .books__inner
                         img.books__img(src="static/images/content/book-green-light.jpg" alt='Фото книги - "Зеленый свет"' width="221" height="221")
@@ -225,7 +228,8 @@ html(lang="ru-RU")
                               </svg>
                             span.books__star 3.9
                           .books__wrapper
-                            a.books__link(href="#") Подробнее #[span.books__pages 320 страниц]
+                            a.books__link(href="#") Подробнее 
+                            span.books__pages 320 страниц
                     li.books__item
                       .books__inner
                         img.books__img(src="static/images/content/book-sun-midnight.jpg" alt='Фото книги - "Солнце полуночи"' width="221" height="221")
@@ -241,7 +245,8 @@ html(lang="ru-RU")
                               </svg>
                             span.books__star 3.5
                           .books__wrapper
-                            a.books__link(href="#") Подробнее #[span.books__pages 784 страниц]
+                            a.books__link(href="#") Подробнее 
+                            span.books__pages 784 страниц
                     li.books__item
                       .books__inner
                         img.books__img(src="static/images/content/book-second-life.jpg" alt='Фото книги - "Вторая жизнь Уве"' width="221" height="221")
@@ -257,7 +262,8 @@ html(lang="ru-RU")
                               </svg>
                             span.books__star 4.4
                           .books__wrapper
-                            a.books__link(href="#") Подробнее #[span.books__pages 384 страниц]
+                            a.books__link(href="#") Подробнее 
+                            span.books__pages 384 страниц
                     li.books__item
                       .books__inner
                         img.books__img(src="static/images/content/book-istrebitel.jpg" alt='Фото книги - "Истребитель"' width="221" height="221")
@@ -273,7 +279,8 @@ html(lang="ru-RU")
                               </svg>
                             span.books__star 3.9
                           .books__wrapper
-                            a.books__link(href="#") Подробнее #[span.books__pages 576 страниц]
+                            a.books__link(href="#") Подробнее
+                            span.books__pages 576 страниц
                     li.books__item
                       .books__inner
                         img.books__img(src="static/images/content/book-lavr.jpg" alt='Фото книги - "Лавр"' width="221" height="221")
@@ -289,7 +296,8 @@ html(lang="ru-RU")
                               </svg>
                             span.books__star 4.1
                           .books__wrapper
-                            a.books__link(href="#") Подробнее #[span.books__pages 448 страниц]
+                            a.books__link(href="#") Подробнее 
+                            span.books__pages 448 страниц
               .catalog__pagination.pagination
                 ul.pagination__list
                   li.pagination__item
