--- a/static/pug/layout/layout.pug
+++ b/static/pug/layout/layout.pug
@@ -5,7 +5,9 @@ html(lang='ru-RU')
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(name="keywords" content="")
     link(rel="stylesheet" type="text/css" href="./static/css/styles.css")
-    title Главная страница
+    title Название страницы
   body
     .wrapper
+      include ../modules/header.pug
       block content
+      include ../modules/footer.pug
