--- a/static/pug/index.pug
+++ b/static/pug/index.pug
@@ -1,8 +1,14 @@
 extends layout/layout
 
+block variables 
+  - var title = 'Главная страница'
+  - var pageClass = 'index-page'
+  - var pathContentImg = 'static/images/content/'
+  - var pathCommonImg = 'static/images/common/'
+
 block content
   .content
-    main.index-page
+    main(class= pageClass)
       h1.visually-hidden Магазин по продаже книг "По полочкам"
       include modules/hero
       include modules/new-books/new-books
