--- a/static/pug/catalog.pug
+++ b/static/pug/catalog.pug
@@ -1,7 +1,13 @@
 extends layout/layout
 
+block variables 
+  - var title = "Каталог книг"
+  - var pageClass = "catalog-page"
+  - var pathContentImg = 'static/images/content/'
+  - var pathCommonImg = 'static/images/common/'
+
 block content
   .content
-    main.catalog-page
+    main(class= pageClass)
       include modules/breadcrumbs
       include modules/catalog/catalog
