--- a/static/pug/iron-king.pug
+++ b/static/pug/iron-king.pug
@@ -1,8 +1,14 @@
 extends layout/layout
 
+block variables 
+  - var title = "Книга Железный король"
+  - var pageClass = "book-page"
+  - var pathContentImg = 'static/images/content/'
+  - var pathCommonImg = 'static/images/common/'
+
 block content
   .content
-    main.book-page
+    main(class= pageClass)
       include modules/breadcrumbs
       include modules/book/book
       include modules/reviews/critique
