--- a/static/pug/modules/catalog/catalog-books.pug
+++ b/static/pug/modules/catalog/catalog-books.pug
@@ -8,7 +8,7 @@
   ul.books
     li.books__item
       .books__inner
-        img.books__img(src="static/images/content/book-iron-king.jpg" alt='Фото книги - "Железный король"' width="221" height="221")
+        img.books__img(src=`${pathContentImg}book-iron-king.jpg` alt='Фото книги - "Железный король"' width="221" height="221")
         .books__box
           p.books__author Кагава Д.
           h3.books__name Железный король
@@ -25,7 +25,7 @@
             span.books__pages 416 страниц
     li.books__item
       .books__inner
-        img.books__img(src="static/images/content/book-fox-hole.jpg" alt='Фото книги - "Лисья нора"' width="221" height="221")
+        img.books__img(src=`${pathContentImg}book-fox-hole.jpg` alt='Фото книги - "Лисья нора"' width="221" height="221")
         .books__box
           p.books__author Сакавич Н.
           h3.books__name Лисья нора
@@ -42,7 +42,7 @@
             span.books__pages 336 страниц
     li.books__item
       .books__inner
-        img.books__img(src="static/images/content/book-just-masa.jpg" alt='Фото книги - "Просто маса"' width="221" height="221")
+        img.books__img(src=`${pathContentImg}book-just-masa.jpg` alt='Фото книги - "Просто маса"' width="221" height="221")
         .books__box
           p.books__author Акунин Б.
           h3.books__name Просто маса
@@ -59,7 +59,7 @@
             span.books__pages 448 страниц
     li.books__item
       .books__inner
-        img.books__img(src="static/images/content/book-green-light.jpg" alt='Фото книги - "Зеленый свет"' width="221" height="221")
+        img.books__img(src=`${pathContentImg}book-green-light.jpg` alt='Фото книги - "Зеленый свет"' width="221" height="221")
         .books__box
           p.books__author Макконахи М.
           h3.books__name Зеленый свет
@@ -76,7 +76,7 @@
             span.books__pages 320 страниц
     li.books__item
       .books__inner
-        img.books__img(src="static/images/content/book-sun-midnight.jpg" alt='Фото книги - "Солнце полуночи"' width="221" height="221")
+        img.books__img(src=`${pathContentImg}book-sun-midnight.jpg` alt='Фото книги - "Солнце полуночи"' width="221" height="221")
         .books__box
           p.books__author Майер С.
           h3.books__name Солнце полуночи
@@ -93,7 +93,7 @@
             span.books__pages 784 страниц
     li.books__item
       .books__inner
-        img.books__img(src="static/images/content/book-second-life.jpg" alt='Фото книги - "Вторая жизнь Уве"' width="221" height="221")
+        img.books__img(src=`${pathContentImg}book-second-life.jpg` alt='Фото книги - "Вторая жизнь Уве"' width="221" height="221")
         .books__box
           p.books__author Бакман Ф.
           h3.books__name Вторая жизнь Уве
@@ -110,7 +110,7 @@
             span.books__pages 384 страниц
     li.books__item
       .books__inner
-        img.books__img(src="static/images/content/book-istrebitel.jpg" alt='Фото книги - "Истребитель"' width="221" height="221")
+        img.books__img(src=`${pathContentImg}book-istrebitel.jpg` alt='Фото книги - "Истребитель"' width="221" height="221")
         .books__box
           p.books__author Быков Д.
           h3.books__name Истребитель
@@ -127,7 +127,7 @@
             span.books__pages 576 страниц
     li.books__item
       .books__inner
-        img.books__img(src="static/images/content/book-lavr.jpg" alt='Фото книги - "Лавр"' width="221" height="221")
+        img.books__img(src=`${pathContentImg}book-lavr.jpg` alt='Фото книги - "Лавр"' width="221" height="221")
         .books__box
           p.books__author Водолазкин Е.
           h3.books__name Лавр
