--- a/static/pug/modules/reviews/critique.pug
+++ b/static/pug/modules/reviews/critique.pug
@@ -6,7 +6,7 @@ section.reviews
         .reviews__wrapper
           .reviews__info
             .reviews__box-images
-              img.reviews__img(src="static/images/content/review-4.jpg" alt="Фото автора отзыва" width="80" height="80")
+              img.reviews__img(src=`${pathContentImg}review-4.jpg` alt="Фото автора отзыва" width="80" height="80")
             .reviews__box
               h3.reviews__name Алексей Иванов
               p.reviews__count Купил 23 книг
@@ -15,7 +15,7 @@ section.reviews
         .reviews__wrapper
           .reviews__info
             .reviews__box-images
-              img.reviews__img(src="static/images/content/review-5.jpg" alt="Фото автора отзыва" width="80" height="80")
+              img.reviews__img(src=`${pathContentImg}review-5.jpg` alt="Фото автора отзыва" width="80" height="80")
             .reviews__box
               h3.reviews__name Анна Кириллова
               p.reviews__count Купила 50 книг
@@ -24,7 +24,7 @@ section.reviews
         .reviews__wrapper
           .reviews__info
             .reviews__box-images
-              img.reviews__img(src="static/images/content/review-6.jpg" alt="Фото автора отзыва" width="80" height="80")
+              img.reviews__img(src=`${pathContentImg}review-6.jpg` alt="Фото автора отзыва" width="80" height="80")
             .reviews__box
               h3.reviews__name Мария Нагаева
               p.reviews__count Купила 8 книг
