--- a/static/pug/modules/reviews/critique.pug
+++ b/static/pug/modules/reviews/critique.pug
@@ -1,3 +1,5 @@
+include critique-data
+
 section.reviews
   .container
     h2.reviews__title.section__title Рецензии
@@ -6,26 +8,26 @@ section.reviews
         .reviews__wrapper
           .reviews__info
             .reviews__box-images
-              img.reviews__img(src=`${pathContentImg}review-4.jpg` alt="Фото автора отзыва" width="80" height="80")
+              img.reviews__img(src=reviews[0].img alt="Фото автора отзыва" width="80" height="80")
             .reviews__box
-              h3.reviews__name Алексей Иванов
-              p.reviews__count Купил 23 книг
-          p.reviews__review Хорошая книга. Полна приключений, романтики, неплохих действующих героев. Вообщем всего, что нужно, чтобы хорошо провести время за чтением.
+              h3.reviews__name= reviews[0].name
+              p.reviews__count Купил #{reviews[0].count} книг
+          p.reviews__review= reviews[0].review
       li.reviews__item
         .reviews__wrapper
           .reviews__info
             .reviews__box-images
-              img.reviews__img(src=`${pathContentImg}review-5.jpg` alt="Фото автора отзыва" width="80" height="80")
+              img.reviews__img(src=reviews[1].img alt="Фото автора отзыва" width="80" height="80")
             .reviews__box
-              h3.reviews__name Анна Кириллова
-              p.reviews__count Купила 50 книг
-          p.reviews__review Не ожидала многого от этой книги, купилась больше на красивую обложку, но была рада ошибиться. Обе книги прочитала дня за 3 или 4, уже не помню, так вчиталась!
+              h3.reviews__name= reviews[1].name
+              p.reviews__count Купила #{reviews[1].count} книг
+          p.reviews__review= reviews[1].review
       li.reviews__item
         .reviews__wrapper
           .reviews__info
             .reviews__box-images
-              img.reviews__img(src=`${pathContentImg}review-6.jpg` alt="Фото автора отзыва" width="80" height="80")
+              img.reviews__img(src=reviews[2].img alt="Фото автора отзыва" width="80" height="80")
             .reviews__box
-              h3.reviews__name Мария Нагаева
-              p.reviews__count Купила 8 книг
-          p.reviews__review Очень нетипичный подход, учитывая, что фейри и железо слабо совместимы, но логика автора, позволившая формирование нового Двора, меня восхитила.
+              h3.reviews__name= reviews[2].name
+              p.reviews__count Купила #{reviews[2].count} книг
+          p.reviews__review= reviews[2].review
