--- a/static/pug/modules/reviews/critique.pug
+++ b/static/pug/modules/reviews/critique.pug
@@ -3,31 +3,4 @@ include critique-data
 section.reviews
   .container
     h2.reviews__title.section__title Рецензии
-    ul.reviews__list
-      li.reviews__item
-        .reviews__wrapper
-          .reviews__info
-            .reviews__box-images
-              img.reviews__img(src=reviews[0].img alt="Фото автора отзыва" width="80" height="80")
-            .reviews__box
-              h3.reviews__name= reviews[0].name
-              p.reviews__count Купил #{reviews[0].count} книг
-          p.reviews__review= reviews[0].review
-      li.reviews__item
-        .reviews__wrapper
-          .reviews__info
-            .reviews__box-images
-              img.reviews__img(src=reviews[1].img alt="Фото автора отзыва" width="80" height="80")
-            .reviews__box
-              h3.reviews__name= reviews[1].name
-              p.reviews__count Купила #{reviews[1].count} книг
-          p.reviews__review= reviews[1].review
-      li.reviews__item
-        .reviews__wrapper
-          .reviews__info
-            .reviews__box-images
-              img.reviews__img(src=reviews[2].img alt="Фото автора отзыва" width="80" height="80")
-            .reviews__box
-              h3.reviews__name= reviews[2].name
-              p.reviews__count Купила #{reviews[2].count} книг
-          p.reviews__review= reviews[2].review
+    include ../review-layout/review-layout
