--- a/static/pug/modules/header.pug
+++ b/static/pug/modules/header.pug
@@ -1,7 +1,7 @@
 header.header
   .container
     .header__wrapper
-      a.header__logo-link #[span.visually-hidden Логотип сайта "По полочкам"]
+      a.header__logo-link(href=pageClass === "index-page" ? false : "index.html") #[span.visually-hidden Логотип сайта "По полочкам"]
         .
           <svg class="header__logo" width="230" height="35" viewBox="0 0 230 35" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 0.612722H21.2467V3.21678H17.9631V14.5521H21.2467V17.1945H12.6321V14.5521H14.6409V3.21678H6.6058V14.5521H8.61458V17.1945H0V14.5521H3.28358V3.21678H0V0.612722Z"
@@ -54,17 +54,11 @@ header.header
       .nav__content
         ul.nav__list
           li.nav__item
-            a.nav__link(href="index.html") Главная
+            a.nav__link(href=pageClass === "index-page" ? false : "index.html") Главная
           li.nav__item
-            a.nav__link(href="catalog.html") Каталог книг
+            a.nav__link(class=pageClass === "catalog-page" ? "nav__link--active" : false href=pageClass === "catalog-page" ? false : "catalog.html") Каталог книг
           li.nav__item
-            a.nav__link(href="#") Оплата и доставка
+            a.nav__link(class=pageClass !== "pay-delivery-page" ? false : "nav__link--active" href=pageClass === "pay-delivery-page" ? false : "#") Оплата и доставка
           li.nav__item
-            a.nav__link(href="#") Контакты
-        ul.user-nav
-          li.user-nav__item
-            a.user-nav__link.user-nav__link--transparent(href="#")
-              span.user-nav__text Регистрация
-          li.user-nav__item
-            a.user-nav__link(href="#")
-              span.user-nav__text Вход
+            a.nav__link(class=pageClass !== "contacts-page" ? false : "nav__link--active" href=pageClass === "contacts-page" ? false : "#") Контакты
+        include user-nav
