--- a/static/pug/modules/footer.pug
+++ b/static/pug/modules/footer.pug
@@ -1,3 +1,10 @@
+mixin footer-item(name, link, page, text)
+  li.footer-nav__sub-item
+    if !text
+      a.footer-nav__link(href= pageClass === page ? false : link)= name
+    else
+      p.footer-nav__text!= text
+
 footer.footer
   .container
     .footer__wrapper
@@ -66,41 +73,27 @@ footer.footer
           li.footer-nav__item
             h4.footer-nav__title Меню
             ul.footer-nav__sub-list
-              li.footer-nav__sub-item
-                a.footer-nav__link(href=pageClass === "index-page" ? false : "index.html") Главная
-              li.footer-nav__sub-item
-                a.footer-nav__link(href=pageClass === "catalog-page" ? false : "catalog.html") Каталог книг
-              li.footer-nav__sub-item
-                a.footer-nav__link(href="#") Оплата и доставка
-              li.footer-nav__sub-item
-                a.footer-nav__link(href="#") Контакты
+              +footer-sub-nav("Главная", "index.html", "index-page")
+              +footer-sub-nav("Каталог книг", "catalog.html", "catalog-page")
+              +footer-sub-nav("Оплата и доставка", "#", "delivery-page")
+              +footer-sub-nav("Контакты", "#", "contacts-page")
           li.footer-nav__item
             h4.footer-nav__title Интересно
             ul.footer-nav__sub-list
-              li.footer-nav__sub-item
-                a.footer-nav__link(href="#") Новости
-              li.footer-nav__sub-item
-                a.footer-nav__link(href="#") Акции
-              li.footer-nav__sub-item
-                a.footer-nav__link(href="#") Блог
-              li.footer-nav__sub-item
-                a.footer-nav__link(href="#") Скидки
+              +footer-sub-nav("Новости", "#", "news-page")
+              +footer-sub-nav("Акции", "#", "stock-page")
+              +footer-sub-nav("Блог", "#", "blog-page")
+              +footer-sub-nav("Скидки", "#", "sale-page")
           li.footer-nav__item
             h4.footer-nav__title Важно
             ul.footer-nav__sub-list
-              li.footer-nav__sub-item
-                a.footer-nav__link(href="#") Возврат
-              li.footer-nav__sub-item
-                a.footer-nav__link(href="#") Сертификаты
-              li.footer-nav__sub-item
-                a.footer-nav__link(href="#") Предзаказы
-              li.footer-nav__sub-item
-                a.footer-nav__link(href="#") Конкурсы
+              +footer-sub-nav("Возврат", "#", "backup-page")
+              +footer-sub-nav("Сертификаты", "#", "certificates-page")
+              +footer-sub-nav("Предзаказы", "#", "preorder-page")
+              +footer-sub-nav("Конкурсы", "#", "gift-page")
           li.footer-nav__item
             h4.footer-nav__title.footer-nav__title--more Адрес
             ul.footer-nav__sub-list
-              li.footer-nav__sub-item
-                p.footer-nav__text г. Санкт-Петербург, #[br] наб. Pеки Карповки, 5 корпус П
-              li.footer-nav__sub-item
-                a.footer-nav__link(href="tel:+78005558628") +7 800 555 86 28
+              +footer-sub-nav("", "", "", "г. Санкт-Петербург,<br> наб. Pеки Карповки, 5 корпус П")
+              +footer-sub-nav("+7 800 555 86 28", "tel:+78005558628", "")
   p.footer__copyright © ООО «Интерактивные обучающие технологии», 2013−2021
