--- a/static/pug/modules/hero.pug
+++ b/static/pug/modules/hero.pug
@@ -1,3 +1,8 @@
+mixin bullet-item(text, active)
+  li.slider__bullet
+    button.slider__bullet-button(class=active ? "slider__bullet-button--active" : "")
+      span.visually-hidden= text
+
 section.hero
   .container
     .hero__slider.slider
@@ -8,15 +13,9 @@ section.hero
           a.slider__link(href="#") Подробнее
             img.slider__img(src=`${pathContentImg}hero-slider-1@1x.png` srcset=`${pathContentImg}hero-slider-1@2x.png 2x` width="400" height="633" alt="Картинка книга Пиши, сокращай")
       ul.slider__bullets
-        li.slider__bullet
-          button.slider__bullet-button.slider__bullet-button--active
-            span.visually-hidden Первый слайд
-        li.slider__bullet
-          button.slider__bullet-button
-            span.visually-hidden Второй слайд
-        li.slider__bullet
-          button.slider__bullet-button
-            span.visually-hidden Третий слайд
+        +bullet-item("Первый слайд", true)
+        +bullet-item("Второй слайд")
+        +bullet-item("Третий слайд")
       ul.slider__arrows
         li.slider__arrow
           button.slider__arrow-button.slider__arrow-button--prev
